lanecwe-Prod/src/objects/Development__c.object
<CustomObject>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Development</relationshipLabel>
        <relationshipName>Development</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account Criteria Based Sharing Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Owner Sharing Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Territory Owner Sharing Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytic Snapshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Sharing Reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Process (with some restrictions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auth. Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoResponse Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Button or Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Criteria Based Sharing Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Owner Sharing Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Criteria Based Sharing Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Owner Sharing Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communities (Zones)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Criteria Based Sharing Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Owner Sharing Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Data Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object Criteria Sharing Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object Owner Sharing Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Report Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Setting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Location__c</fullName>
        <label>Current Location</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bckupProd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXTDEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXTDEV2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FullData30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTDEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pgicopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <picklist>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dev_Type__c</fullName>
        <label>Dev Type</label>
        <picklist>
            <picklistValues>
                <fullName>Declarative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmatic</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dev_URL__c</fullName>
        <label>Dev_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Development</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieldLabel__c</fullName>
        <label>Field Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Release_Probability__c</fullName>
        <formula>IF(ISPICKVAL(Ready_for_Next_Release__c, &quot;Definitely&quot;), 0.95,
IF(ISPICKVAL(Ready_for_Next_Release__c, &quot;Very Likely&quot;), 0.75,
IF(ISPICKVAL(Ready_for_Next_Release__c, &quot;Maybe&quot;), 0.50,
IF(ISPICKVAL(Ready_for_Next_Release__c, &quot;Probably Not&quot;), 0.30, 
0.05))))</formula>
        <label>Next Release Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Passed_QC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed QC?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_for_Next_Release__c</fullName>
        <label>Next Release Certainty</label>
        <picklist>
            <picklistValues>
                <fullName>Definitely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probably Not</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Definitely Not</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Development</label>
    <nameField>
        <displayFormat>Dev - {000} - {MM}/{DD}/{YY}</displayFormat>
        <label>Development Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Development</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>API_Name_Must_be_Populated</fullName>
        <active>true</active>
        <errorConditionFormula>API_Name__c = &quot;&quot;</errorConditionFormula>
        <errorDisplayField>API_Name__c</errorDisplayField>
        <errorMessage>API Name must be provided in order to save.</errorMessage>
    </validationRules>
</CustomObject>